src/test/ui/anon-params-denied-2018.stderr
error: expected one of `:` or `@`, found `)`
  --> $DIR/anon-params-denied-2018.rs:6:15
   |
LL |     fn foo(i32); //~ expected one of `:` or `@`, found `)`
   |               ^ expected one of `:` or `@` here

error: expected one of `:` or `@`, found `,`
  --> $DIR/anon-params-denied-2018.rs:8:36
   |
LL |     fn bar_with_default_impl(String, String) {}
   |                                    ^ expected one of `:` or `@` here

error: aborting due to 2 previous errors

